# carve

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CARVE_DESIGN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  RULES.md  STYLE_CPP.md
.bcr/: metadata.template.json  presubmit.yml
.claude/: settings.local.json
.github/workflows/: main.yml  publish.yaml  release.yml  release_prep.sh
bazelmod/: BUILD.bazel  dev.MODULE.bazel
bazelmod/patches/: BUILD.bazel  llvm_compiler_rt_macos_nostdinc.patch  llvm_compiler_rt_symbolizer_headers.patch
carve/: BUILD.bazel  carve.cc  carve_aggregate.cc  carve_shard.cc
carve/aggregate/: BUILD.bazel  aggregate.cc  aggregate.h  aggregate_test.cc
carve/aquery/: BUILD.bazel  aquery.cc  aquery.h  aquery_test.cc
carve/cdb/: BUILD.bazel  cdb.cc  cdb.h  cdb_test.cc  json_matcher.h  json_matcher_test.cc
carve/cli/: BUILD.bazel  cli.cc  cli.h  cli_test.cc
carve/command/: BUILD.bazel  command.cc  command.h  command_test.cc
carve/e2e/: BUILD.bazel  end_to_end_test.cc
carve/io/: BUILD.bazel  io.cc  io.h  io_test.cc
carve/process/: BUILD.bazel  process.cc  process.h  process_test.cc
carve/prune/: BUILD.bazel  prune.cc  prune.h  prune_test.cc
carve/refresh/: BUILD.bazel  refresh.cc  refresh.h  refresh_test.cc
carve/scan_deps/: BUILD.bazel  scan_deps.cc  scan_deps.h  scan_deps_test.cc
carve/shard/: BUILD.bazel  shard.cc  shard.h  shard_test.cc
carve/sidecar/: BUILD.bazel  carve.proto  sidecar.cc  sidecar.h  sidecar_test.cc
docs/: IMPLEMENTATION_PLAN.md  differential-report.md  test-plan.md
rules/: BUILD.bazel  carve.bzl  carve_aggregate.tpl.sh  carve_refresh.tpl.sh  carve_test.bzl  cc_carve_aspect.bzl
rules/testdata/: BUILD.bazel  lib.cc  lib.h
tools/: align_md_tables.py  cdb_diff.py  header.txt
