# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//rules:carve.bzl", "carve_refresh")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "clang-format",
    srcs = [".clang-format"],
    visibility = ["//visibility:public"],
)

# Layer B entry point: `bazel run //:refresh` writes compile_commands.json to the
# workspace root for the whole repo. See rules/carve.bzl / CARVE_DESIGN.md 4.6.
carve_refresh(
    name = "refresh",
    project_id = "carve",
    targets = ["//carve/..."],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "is_clang",
    define_values = {"is_clang": "true"},
)

# Convenience entry point: `bazel run //:carve -- <subcommand> [flags]`.
alias(
    name = "carve",
    actual = "//carve:carve",
    visibility = ["//visibility:public"],
)
