# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Module helly25_carve.

Carve compile_commands.json out of Bazel build graphs for clangd-style tooling.
See CARVE_DESIGN.md for the architecture.
"""

module(
    name = "helly25_carve",
    version = "0.0.1",
    repo_name = "com_helly25_carve",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "helly25_mbo", version = "0.11.1", repo_name = "com_helly25_mbo")

# Test-only deps.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# C++ toolchain via bazel-contrib/toolchains_llvm (as in the sibling project
# helly25/mbo), pinned to LLVM 22.1.8 (headers are C++23-clean). carve/scan_deps
# links clang's C++ API (libclang-cpp); it gets that from the SAME toolchain
# download via the `clang_cpp` target the toolchains_llvm distribution repo
# exposes — one LLVM download, guaranteed ABI match, no separate http_archive.
# Both the 22.1.8 distribution entries and the `clang_cpp` target currently live
# only in the sibling toolchains_llvm checkout (see local_path_override below);
# they are pending upstream + a release, after which the override is dropped for
# a plain version pin. Dev dependency so consumers are not forced onto this clang.
bazel_dep(name = "toolchains_llvm", version = "1.7.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "22.1.8",
)

# `llvm_toolchain_llvm` is the LLVM distribution repo; //carve/scan_deps depends
# on its `clang_cpp` target (libclang-cpp + headers) for in-process scanning.
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# Use the local toolchains_llvm checkout: it carries the LLVM 22.1.8 distribution
# entries and the `clang_cpp` target consumed by //carve/scan_deps. Drop this for
# a normal version pin once a toolchains_llvm release ships both.
local_path_override(
    module_name = "toolchains_llvm",
    path = "../toolchains_llvm",
)
