# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Module helly25_carve.

Carve compile_commands.json out of Bazel build graphs for clangd-style tooling.
See CARVE_DESIGN.md for the architecture.
"""

module(
    name = "helly25_carve",
    version = "0.0.1",
)

# Development-only modules: the Hedron compile-commands extractor (helly25 fork)
# for clangd + local clang-tidy, and dwyu. All dev_dependency, so they are used
# only when carve is the root module and never propagate to dependents. See
# STYLE_CPP.md ("Toolchain") for how clang-tidy is run locally.
include("//bazelmod:dev.MODULE.bazel")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "helly25_mbo", version = "0.11.1")

# Test-only deps.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Proto test matchers (EqualsProto/Partially/WhenDeserialized) that upstream
# protobuf does not ship. Used to assert on proto data structurally instead of
# comparing serialized strings. See CARVE_DESIGN.md section 9.1.
bazel_dep(name = "helly25_proto", version = "1.2.1", dev_dependency = True)

# C++ toolchain AND linkable clang libraries from hermeticbuild/hermetic-llvm
# (the `llvm` BCR module), pinned to LLVM 22.1.7. One ecosystem provides both:
#   - a fully hermetic clang cross-compilation toolchain whose C++ standard
#     library (libc++) is built FROM SOURCE on every platform, registered below;
#   - the @llvm-project Bazel overlay, from which //carve/scan_deps links the
#     clang dependency-scanning library (@llvm-project//clang:tooling).
# The overlay is compiled with this toolchain, so the dependency-scanning libs
# and our own code share ONE libc++ - no shared-library ABI boundary and no
# libstdc++-on-Linux coupling (the defect of wrapping upstream prebuilt LLVM).
# Our code is C++23; LLVM's own sources are a C++17 codebase and compile at C++17
# (see the scoped per_file_copt in .bazelrc) while linking the same libc++.
bazel_dep(name = "llvm", version = "0.8.9")

# Patch the BCR `llvm` module with the compiler-rt sanitizer-runtime fixes until
# they ship in a release: the internal symbolizer could not build, so no sanitizer
# runtime (asan/ubsan/tsan) could either -- on macOS `-nostdinc++` stripped the SDK
# libc++ from the symbolizer TU, and the TU could not see LLVM's public/generated
# headers. Upstream: hermeticbuild/hermetic-llvm#655 (+ a headers follow-up). Drop
# this override once the fixes land in a released `llvm` version (then bump above).
single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = [
        "//bazelmod/patches:llvm_compiler_rt_macos_nostdinc.patch",
        "//bazelmod/patches:llvm_compiler_rt_symbolizer_headers.patch",
    ],
)

# Register the hermetic clang toolchain. Dev dependency so consumers compile
# carve with their own toolchain (the @llvm-project overlay still travels as a
# normal dep and is built by whatever toolchain is active, keeping libc++
# consistent between scan_deps and the LLVM libs either way).
register_toolchains(
    "@llvm//toolchain:all",
    dev_dependency = True,
)

# The @llvm-project overlay (clang/LLVM libraries built from source). NOT a dev
# dependency: //carve/scan_deps is part of the shipped carve binary, and the
# `llvm` extension rejects dev-only usage.
llvm_overlay = use_extension("@llvm//extensions:llvm.bzl", "llvm")
use_repo(llvm_overlay, "llvm-project")
