# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:private"])

cc_binary(
    name = "carve",
    srcs = ["carve.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//carve/aggregate:aggregate_cc",
        "//carve/cli:cli_cc",
        "//carve/process:process_cc",
        "//carve/prune:prune_cc",
        "//carve/refresh:refresh_cc",
        # Real header scanner; its linux+macos platform gate propagates to this
        # binary (and the e2e test), keeping refresh itself cross-platform.
        "//carve/scan_deps:scan_deps_cc",
        "//carve/shard:shard_cc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@helly25_mbo//mbo/status:status_macros_cc",
    ],
)

# Lean, scan-free build of the `shard` subcommand for the Layer C aspect's
# per-action exec tool. It links neither scan_deps nor the from-source LLVM, so it
# builds in seconds rather than a full LLVM compile -- which makes a per-compile
# build tool viable. See carve_shard.cc for the rationale.
cc_binary(
    name = "carve_shard",
    srcs = ["carve_shard.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//carve/process:process_cc",
        "//carve/shard:shard_cc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
    ],
)

# Lean build of the `aggregate` subcommand for the Layer C launcher
# (carve_aspect_refresh). Merging proto records needs no compiler, so it links
# neither scan_deps nor the from-source LLVM -- a `bazel run` of a Layer C refresh
# (and the aspect build_test) therefore never triggers a full LLVM build. See
# carve_aggregate.cc for the rationale.
cc_binary(
    name = "carve_aggregate",
    srcs = ["carve_aggregate.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//carve/aggregate:aggregate_cc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
