# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":carve_test.bzl", "carve_rules_test_suite")

package(default_visibility = ["//visibility:public"])

# The carve rules and their launcher templates, consumed by
# `load("@helly25_carve//rules:carve.bzl", "carve_refresh", "carve_aspect_refresh")`
# and `load("@helly25_carve//rules:cc_carve_aspect.bzl", "cc_carve_aspect")`.
exports_files([
    "carve.bzl",
    "cc_carve_aspect.bzl",
    "carve_refresh.tpl.sh",
    "carve_aggregate.tpl.sh",
])

carve_rules_test_suite(name = "carve_rules_test")
