# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "aquery_cc",
    srcs = ["aquery.cc"],
    hdrs = ["aquery.h"],
    implementation_deps = [
        "//carve/third_party/bazel:analysis_v2_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
    ],
    visibility = ["//carve:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "aquery_test",
    size = "small",
    srcs = ["aquery_test.cc"],
    deps = [
        ":aquery_cc",
        "//carve/third_party/bazel:analysis_v2_cc_proto",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
