# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "cdb_cc",
    srcs = ["cdb.cc"],
    hdrs = ["cdb.h"],
    implementation_deps = [
        "//carve/io:io_cc",
    ],
    visibility = ["//carve:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/types:span",
    ],
)

# Test-support gmock matcher `EqJson` for comparing JSON output (e.g. `ToJson`)
# semantically (key-order / whitespace independent) instead of byte-for-byte. See
# the header for the documented schema-validation gap. Header-only: `MATCHER_P`
# must expand at the use site, so there is no `.cc`.
cc_library(
    name = "json_matcher_cc",
    testonly = True,
    hdrs = ["json_matcher.h"],
    visibility = ["//carve:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@protobuf//:differencer",
        "@protobuf//:json_util",
        "@protobuf//:struct_cc_proto",
    ],
)

cc_test(
    name = "json_matcher_test",
    size = "small",
    srcs = ["json_matcher_test.cc"],
    deps = [
        ":json_matcher_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cdb_test",
    size = "small",
    srcs = ["cdb_test.cc"],
    deps = [
        ":cdb_cc",
        ":json_matcher_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:status_cc",
    ],
)
