# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

# scan_deps links the LLVM/Clang dependency-scanning libraries, built from source
# via the hermetic-llvm @llvm-project overlay. Supported on macOS and Linux (the
# two CI platforms); marked incompatible elsewhere so those targets are skipped.
_LLVM_PLATFORM = select({
    "@platforms//os:linux": [],
    "@platforms//os:macos": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

cc_library(
    name = "scan_deps_cc",
    srcs = ["scan_deps.cc"],
    hdrs = ["scan_deps.h"],
    implementation_deps = [
        "//carve/command:command_cc",  # ParseMakeDependencies (make-format depfile parser).
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        # Clang dependency-scanning libraries, built from source via the
        # @llvm-project overlay (the `llvm` module). `:tooling` provides
        # DependencyScanningTool.h and depends on `:dependency_scanning`
        # (DependencyScanningService.h). Built with the same libc++ as our code.
        "@llvm-project//clang:tooling",
    ],
    target_compatible_with = _LLVM_PLATFORM,
    visibility = ["//carve:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "scan_deps_test",
    size = "small",
    srcs = ["scan_deps_test.cc"],
    # Links the from-source LLVM; excluded from sanitizer builds.
    tags = ["no_san"],
    target_compatible_with = _LLVM_PLATFORM,
    deps = [
        ":scan_deps_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
