# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "shard_cc",
    srcs = ["shard.cc"],
    hdrs = ["shard.h"],
    implementation_deps = [
        "//carve/command:command_cc",
        "//carve/io:io_cc",
        "//carve/sidecar:sidecar_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@helly25_mbo//mbo/status:status_macros_cc",
    ],
    visibility = ["//carve:__subpackages__"],
    deps = [
        "//carve/sidecar:carve_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "shard_test",
    size = "small",
    srcs = ["shard_test.cc"],
    deps = [
        ":shard_cc",
        "//carve/io:io_cc",
        "//carve/sidecar:carve_cc_proto",
        "//carve/sidecar:sidecar_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:status_cc",
        "@helly25_proto//mbo/proto:matchers_cc",
        "@helly25_proto//mbo/proto:parse_text_proto_cc",
    ],
)
