# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

proto_library(
    name = "carve_proto",
    srcs = ["carve.proto"],
)

cc_proto_library(
    name = "carve_cc_proto",
    visibility = ["//carve:__subpackages__"],
    deps = [":carve_proto"],
)

cc_library(
    name = "sidecar_cc",
    srcs = ["sidecar.cc"],
    hdrs = ["sidecar.h"],
    implementation_deps = [
        "//carve/io:io_cc",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
    ],
    visibility = ["//carve:__subpackages__"],
    deps = [
        ":carve_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "sidecar_test",
    size = "small",
    srcs = ["sidecar_test.cc"],
    deps = [
        ":carve_cc_proto",
        ":sidecar_cc",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
