# SPDX-FileCopyrightText: Copyright (c) The helly25/carve authors (github.com/helly25/carve)
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//rules:__subpackages__"])

# A dependency-free library: the Layer C aspect tests shard it without fanning
# out across external deps, and scan-deps must discover `lib.h` from `lib.cc`.
cc_library(
    name = "lib",
    srcs = ["lib.cc"],
    hdrs = ["lib.h"],
)

# Depends on a minimal external cc_library (one .cc) so the aspect tests can prove
# external compile actions are NOT sharded by default (exclude_external_sources):
# only this target's own `lib.cc` should yield a shard, never abseil's int128.cc.
cc_library(
    name = "lib_with_external_dep",
    srcs = ["lib.cc"],
    hdrs = ["lib.h"],
    deps = ["@abseil-cpp//absl/numeric:int128"],
)
